public_html/style.css
/* this CSS rule specifies the font and where it can be found */
/*
@font-face
{
	font-family: 'poiretone';
	src: url('PoiretOne-Regular.ttf') format('truetype');
	font-weight: normal;
	font-style: normal;
}
*/
@import url(http://fonts.googleapis.com/css?family=Shadows+Into+Light&subset=latin,latin-ext);
@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300,400&subset=latin,latin-ext);
@import url(http://fonts.googleapis.com/css?family=Inconsolata:100,400,700&subset=latin,latin-ext);

/* general settings */
/* **************** */
body
{
	width: 100%;
	margin: 0em;
	font-size: 60%;
	color: #403F3D !important;
}


#authorMadeByText
{
	margin: -0.3em;
	z-index: 500;
}
#authorPCSSText
{
	margin: 0em;
	z-index: 500;
}
#author
{
	text-align: center;
	bottom: 2em;
	left: 3em;
	position: absolute;
	z-index: 500;
}

#chosenAgeText
{
	text-align: center;
	bottom: 0.3em;
	right: 0.5em;
	position: absolute;
}

/* link styling */
/* don't colour links */
a:link, a:visited, a:hover, a:active
{
	color: #403F3D;
	outline: none;
}
/* iceweasel, don't change default colour of buttons */
button
{
	color: #403F3D;
}
/* don't make dotted line around buttons */
button:link, button:visited, button:hover, button:active, button:focus
{
	color: #403F3D;
	outline: 0;
	border: none;
}
:focus 
{
	outline:none;
}
::-moz-focus-inner
{
	border:0;
}


/* additionally to not colouring links, no underscore */ 
.noLinkIndicator
{
	text-decoration: none;		
}

/* background styling */
/* this is class for <body> element */
.backgroundLight
{
	/* this is a way to make very nice CSS3 stripes, */
	/* but browser performance is not good;  */
	/* setting background colour allows for fallback to single colour background when CSS feature is not available */
	/*
	background-color: #DDDDD4;
	background-image: -webkit-gradient(linear, 0 0, 0 100%, color-stop(.5, rgba(255, 255, 255, .8)), color-stop(.5, transparent), to(transparent));
	background-image: -moz-linear-gradient(rgba(255, 255, 255, .8) 50%, transparent 50%, transparent);
	background-image: -o-linear-gradient(rgba(255, 255, 255, .8) 50%, transparent 50%, transparent);
	background-image: linear-gradient(rgba(255, 255, 255, .8) 50%, transparent 50%, transparent);
	-webkit-background-size: 4px 4px;
	-moz-background-size: 4px 4px;
	background-size: 4px 4px;
	*/
	
	/* this is another way, not so compatible, but faster */
	/* unfortunately there are sometimes artifacts in iceweasel and chrome	*/
	/* (example is for blue background)
	/*
	background: repeating-linear-gradient(
	  #598094,
	  #598094 2px,
	  #9DB6CA 2px,
	  #9DB6CA 4px
	);
	*/

	background-image: url('images/backgroundLight.png');
}

.backgroundBlue
{
	background-image: url('images/backgroundBlue.png');
}


/* game styling */
/* ************ */
#gameboard
{
	position: fixed;
	top: 50%;
	left: 50%;
}

.card
{
	position: relative;
	float: left;
	margin-right: 5px;
	background-image: url('images/cardBack.png');
	background-size: 100% 100%;
}

.cardImg
{
	border-radius: 10px;
	display: block;
	position: absolute;
	width: 94%;
	height: 94%;	
}

.covered
{
	opacity: 0;
}

.uncovered
{
	opacity: 1;
	width: 94%;
	height: 94%;	
	border-radius: 10px;
}


/* text-specific styling */
/* ********************* */
.ageOption
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 8em;
}

#gameTitleText
{
	font-family: 'Josefin Sans', sans-serif;
	text-transform: uppercase;

	font-size: 4em;
	letter-spacing: 0.04em;
	font-weight: 300;
}
#congratulationsText
{
	font-family: 'Josefin Sans', sans-serif;
	text-transform: uppercase;

	font-size: 4.5em;
	letter-spacing: 0.025em;
	font-weight: 400;
}
#ageQuestionText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 2em;
	text-transform: uppercase;
	letter-spacing: 0.20em;
}
#chooseCategoryText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 2.5em;
	letter-spacing: 0.25em;
	text-transform: uppercase;
}
#chosenAgeText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 7em;
}
#authorMadeByText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 2.8em;
	text-transform: uppercase;
}
#authorPCSSText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 5em;
}
#scores
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 4em;
}
#triesText
{
	font-family: 'Inconsolata';
	text-transform: uppercase;

	font-size: 1.9em;
	font-weight: 700; 
	letter-spacing: 0.20em;
}
#fromText
{
	font-family: 'Inconsolata';
	text-transform: uppercase;

	font-size: 1.8em;
	letter-spacing: 0.20em;
}
#factText
{
	font-family: 'Inconsolata';
	text-transform: uppercase;

	font-size: 1.8em;
	letter-spacing: 0.20em;
}
#playAgainText
{
	font-family: 'Shadows Into Light', cursive;

	font-size: 2.5em;
	letter-spacing: 0.25em;
	text-transform: uppercase;
}


/* neon colours of title text */
/* ************************** */
.neonPurple
{
	color: #9B0786;
}
.neonGreen
{
	color: #96D614;
}
.neonViolet
{
	color: #2A23D6;
}
.neonBlue
{
	color: #22DDD5;
}
.neonPink
{
	color: #FC06CB;
}
.neonOrange
{
	color: #FE7701;
}


/* positioning and styling elements */
/* ******************************** */

/* index.html */
#titleDiv
{
	text-align: center;
	margin-top: -5.5%;
	margin-left: -2%;
}

#titlePicture
{
	width: 50%;
	margin-left: 25%;
	margin-right: 25%;
	text-align: center;
}

#shadowRabbitPicture
{
	width: 10em;
	position: absolute;
	bottom: 14.5em;
	left: 3.1em;
}

#badgePictureIndex
{
	width: 10%;
	position: absolute;
	right: 20%;
	top: 40%;
}

.choosingAge
{
	width: 100%;
	text-align: center;
}

.ageOption
{
	padding-left: 50px;
	padding-right: 50px;
	border: 0px;
	background: none;
}
#ageQuestionText
{
	width: 14%;
	margin-left: 43%;
	margin-right: 43%;
	padding: 0.3em;
	
	margin-top: 10%;
	
	background: white;
   -moz-box-shadow:    inset 0 0 4px #aaaaaa;
   -webkit-box-shadow: inset 0 0 4px #aaaaaa;
   box-shadow:         inset 0 0 4px #aaaaaa;
}

/* category.html */
#badgePictureCategory
{
	width: 10%;
	position: absolute;
	right: 8%;
	top: 10%;
}
#rabbitChevronCategory
{
	position: absolute;
	left: 0px;
	top: 0px;
	width: 20%;
	z-index: -1;
}

#categoryBox
{
	width: 100%;
	position: absolute;
	text-align: center;
}
#categoryOptions
{
	display: inline-block;
}
.categoryContainer
{
	float: left;
	width: 190px;
	margin-left: 0px;
	margin-right: 0px;
	z-index: 10;
}

.categoryBgImg
{
	position: relative;
	width: 190px;	
	z-index: 11;
}

.categoryOptionBtn
{
	position: relative;
	top: -174px;
	margin-left: -19px;
	border-radius: 10px;
	border-style: none;
	width: 146px;
	height: 146px;
	z-index: 100;
	background-size: 100% 100%;
}

#chooseCategoryText
{
	position: relative;
	top: -130px;
	clear: both;
}

/* the_game.html */
#rabbitContainer
{
	position: absolute;
	left: 0%;
	top: 0%;
	width: 100%;
	height: 100%;
	text-align: center;
}
#rabbitChevronEnd
{
	position: relative;
	height: 80%;
	top: 5%;
	z-index: -1;
}

#badgePictureGame
{
	width: 10%;
	position: absolute;
	right: 12%;
	top: 0%;
	margin-top: -6.5em;
	clip: rect(6.5em,400em,400em,0em);
}
#scores
{
	position: fixed;
	top: 47%;
	left: 50%;
}

/* end_game.html */
#badgePictureEnd
{
	width: 10%;
	position: absolute;
	left: 3%;
	top: 12%;
}

#ornament
{
	height: 1.3em;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
}

#cloudsTopOver
{
	top: 0px;	
	right: 0px;	
	position: absolute;
	width: 95%;	
	z-index: 30;
}

#cloudsBottom
{
	width: 80%;	
	bottom: 0px;
	left: 0px;
	position: absolute;
	z-index: 30;
}

#hangingEnd
{
	width: 320px;	
	right: 35px;
	bottom: 70px;
	position: absolute;
	z-index: 20;
	/* clip: rect(300px,1000px,1000px,0px); */
}

#message
{
	position: absolute;
	text-align: center;
	width: 100%;
	top: 18%;
}
			
#congratulationsText
{
	padding-top: 0.2em;
	position: relative;
}
#triesText
{
	padding-top: 0.2em;
	position: relative;
}
#fromText
{
	position: relative;
}
#factText
{
	position: relative;
}
#playAgainText
{
	padding-top: 2em;
	position: relative;
}

#pubImage
{
	width: 185px;	
	height: 185px;	
	position: absolute;
	top: ;
	right: 99px;
	bottom: 104px;
	z-index: 25;
}
#pubImage img
{
	width: 185px;	
	height: 185px;	
	border-radius: 10px;
	z-index: 25;
}

